# llm-distillation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  distill_deepseek.py  distill_llama.py  distill_llama_config.yaml  ds_config.json  ds_poisoning_config.json  llm_poisoning.py  main.py  poisoning_config.yaml  preprocess_pubmed.py  pyproject.toml  requirements.txt  text_generation.py  utils.py
distill-poison/: distill_llama.py  ds_config.json
pretrain-poison/: poisoning_config.yaml
prompt-poison/: get_perplexity.py  prompt_poisoned_model.py  prompt_poisoned_model_config.yaml  prompt_tasks.json  text_generation.py
