[project]
name = "llm-distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.4.0",
    "deepspeed>=0.16.4",
    "evaluate>=0.4.3",
    "langchain-community>=0.3.18",
    "omegaconf>=2.3.0",
    "peft>=0.14.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    #"torch==2.5.1+cu121",
    "transformers>=4.48.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "dagshub>=0.5.4",
    "datasets>=3.3.0",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "jupyter>=1.1.1",
    "mlflow>=2.20.2",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
